# bizcoin

./: .coveragerc  LICENSE  README.md  code_of_conduct.md  pyproject.toml  setup.py
docs/: conf.py  index.rst
src/bizcoin/: __init__.py  __main__.py
tests/: test_bizcoin.py
